--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,16 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+<style>
+  .circular{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+  }
+</style>
+<ul>
+  <li ng-repeat="articulo in articulos">
+    <a href="#/articulo/{{articulo.name}}">
+      <div class="circular" back-img="{{articulo.owner.avatar_url}}"></div>
+      <h4>{{articulo.name}}</h4>
+    </a>
+  </li>
+</ul>
