--- a/app/views/articulo.html
+++ b/app/views/articulo.html
@@ -1,1 +1,10 @@
-<h1>{{articulo.name}}</h1><strong>de:</strong><h1>{{articulo.owner.login}}</h1>
+<div class="jumbotron">
+  <div class="card">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-block">
+      <h2 class="card-title">{{nombre}}</h2>
+      <!--<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>-->
+    </div>
+  </div>
+</div>
