--- a/app/views/registro.html
+++ b/app/views/registro.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron" id="registro">
   <form class="form-horizontal" ng-submit="registrar(nuevoRegistro)">
     <h2 style="font-family:'cursive'">appVentas</h2>
     <div class="form-group">
