--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -62,9 +62,11 @@ body {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 730px;
+    max-width: 1000px;
   }
-
+  #registro{
+    max-width: 800px;
+  }
   /* Remove the padding we set earlier */
   .header,
   .marketing,
@@ -80,4 +82,22 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+.circle {
+  border-radius: 10%;
+  width: 150px;
+  height: 150px;
+  display: inline-block;
+}
+.ellipsis-2 {
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.panel h3, .ellipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
