--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,16 +1,35 @@
-<style>
-  .circular{
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    display: inline-block;
-  }
-</style>
-<ul>
-  <li ng-repeat="articulo in articulos">
-    <a href="#/articulo/{{articulo.name}}">
-      <div class="circular" back-img="{{articulo.owner.avatar_url}}"></div>
-      <h4>{{articulo.name}}</h4>
-    </a>
-  </li>
-</ul>
+<div >
+  <form class="form-inline" ng-submit="ingresarArticulo(nuevoArticulo)">
+  <input type="hidden" ng-model="nuevoArticulo.id" >
+  <div class="form-group">
+    <input type="text" class="form-control"  ng-model="nuevoArticulo.nombre" placeholder="Nombre del articulo">
+  </div>
+  <div class="form-group">
+    <select class="form-control" ng-model="nuevoArticulo.categoria" ng-options="x.nombre for x in categorias">
+      <option value="" disabled selected>categorias</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <input type="text" class="form-control" ng-model="nuevoArticulo.imagen" placeholder="Url de la imagen">
+  </div>
+  <div class="form-group">
+    <input type="text" class="form-control" ng-model="nuevoArticulo.descripcion" placeholder="Descripcion">
+  </div>
+  <div class="form-group">
+    <input type="text" class="form-control" ng-model="nuevoArticulo.precio" placeholder="Precio">
+  </div>
+  <button type="submit" class="btn btn-primary">Ingresar</button>
+</form>
+</div><br>
+<div class="row">
+    <div class="small-10 column">
+    </div>
+    <div class="column medium-4 animated" ng-class-odd="'slideInLeft'" ng-class-even="'slideInRight'" ng-repeat="articulo in articulos">
+      <a href="#/articulo/{{articulo.nombre}}/{{articulo.id}}">
+        <div class="panel text-center">
+            <img class="circle" ng-src="{{articulo.imagen}}">
+            <h3 class="ellipsis">{{articulo.nombre}}</h3>
+        </div>
+        </a>
+    </div>
+</div>
