--- a/app/views/articulo.html
+++ b/app/views/articulo.html
@@ -8,3 +8,13 @@
     </div>
   </div>
 </div>
+
+<script src="MainCtrl.js"></script>
+<div class="infoProducto" ng-controller="MainCtrl">
+      <div class="panel text-center">
+          <img class="circle" ng-src="{{articulo.imagen}}">
+          <h3 >{{articulo.nombre}}</h3>
+        </a>
+          <h4>{{articulo.precio}}</h4>
+  </div>
+</div>
