--- a/app/views/articulo.html
+++ b/app/views/articulo.html
@@ -2,7 +2,7 @@
   <div class="card">
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-block">
-      <h2 class="card-title">{{nombre}}</h2>
+      <h2 class="card-title">{{articulo.nombre}}</h2>
       <!--<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>-->
     </div>
