--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div >
-  <form class="form-inline" ng-submit="ingresarArticulo(nuevoArticulo)">
+  <form class="form-inline" ng-submit="ingresarArticulo()">
   <input type="hidden" ng-model="nuevoArticulo.id" >
   <div class="form-group">
     <input type="text" class="form-control"  ng-model="nuevoArticulo.nombre" placeholder="Nombre del articulo">
