--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,30 +1,38 @@
-<div >
-  <form class="form-inline" ng-submit="ingresarArticulo(nuevoArticulo)">
+<div class="row">
+
+<div class="col-xs-4">
+  <form class="form-horizontal" ng-submit="ingresarArticulo(nuevoArticulo)">
   <input type="hidden" ng-model="nuevoArticulo.id" >
   <div class="form-group">
     <input type="text" class="form-control"  ng-model="nuevoArticulo.nombre" placeholder="Nombre del articulo">
-  </div>
-  <div class="form-group">
+</div>
+<div class="form-group">
     <select class="form-control" ng-model="nuevoArticulo.categoria" ng-options="x.nombre for x in categorias">
       <option value="" disabled selected>categorias</option>
     </select>
-  </div>
-  <div class="form-group">
+</div>
+<div class="form-group">
     <input type="text" class="form-control" ng-model="nuevoArticulo.imagen" placeholder="Url de la imagen">
-  </div>
-  <div class="form-group">
-    <input type="text" class="form-control" ng-model="nuevoArticulo.descripcion" placeholder="Descripcion">
-  </div>
-  <div class="form-group">
+</div>
+<div class="form-group">
+    <textarea class="form-control" rows="5" ng-model="nuevoArticulo.descripcion" placeholder="Descripcion">
+    </textarea>
+</div>
+<div class="form-group">
     <input type="text" class="form-control" ng-model="nuevoArticulo.precio" placeholder="Precio">
-  </div>
+</div>
+<div class="form-group">
   <button type="submit" class="btn btn-primary">Ingresar</button>
+</div>
 </form>
 </div><br>
+</div>
 <div class="row">
     <div class="small-10 column">
     </div>
-    <div class="column medium-4 animated" ng-class-odd="'slideInLeft'" ng-class-even="'slideInRight'" ng-repeat="articulo in articulos">
+    <div class="column medium-4 animated"
+      ng-class-odd="'slideInLeft'" ng-class-even="'slideInRight'"
+      ng-repeat="articulo in articulos">
       <a href="#/articulo/{{articulo.nombre}}/{{articulo.id}}">
         <div class="panel text-center">
             <img class="circle" ng-src="{{articulo.imagen}}">
