Organizando cambios realizados en master

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -100,3 +100,8 @@ body {
   white-space: nowrap;
   overflow: hidden;
 }
+.cuadroArticulo{
+    width:300px;
+    height:300px;
+    float:left;
+}
