--- a/app/views/main.html
+++ b/app/views/main.html
@@ -21,24 +21,28 @@
 <div class="form-group">
     <input type="text" class="form-control" ng-model="nuevoArticulo.precio" placeholder="Precio">
 </div>
-<div class="form-group">
-  <button type="submit" class="btn btn-primary">Ingresar</button>
-</div>
-</form>
-</div><br>
-</div>
+<!-- Este es el código anterior que los ubicaba en la mitad
 <div class="row">
     <div class="small-10 column">
     </div>
-    <div class="column medium-4 animated"
-      ng-class-odd="'slideInLeft'" ng-class-even="'slideInRight'"
-      ng-repeat="articulo in articulos">
+    <div class="column medium-4 animated" ng-class-odd="'slideInLeft'" ng-class-even="'slideInRight'" ng-repeat="articulo in articulos">
       <a href="#/articulo/{{articulo.nombre}}/{{articulo.id}}">
         <div class="panel text-center">
             <img class="circle" ng-src="{{articulo.imagen}}">
-            <h3>{{articulo.precio | currency}}</h3>
             <h3 class="ellipsis">{{articulo.nombre}}</h3>
+            <h4>{{articulo.precio}}</h4>
         </div>
         </a>
+    </div>
+</div>
+-->
+
+<div class="cuadroArticulo" ng-repeat="articulo in articulos">
+    <div class="panel text-center">
+        <a href="#/articulo/{{articulo.nombre}}/{{articulo.id}}">
+        <img class="circle" ng-src="{{articulo.imagen}}">
+        <h3 >{{articulo.nombre}}</h3>
+      </a>
+        <h4>{{articulo.precio | currency}}</h4>
     </div>
 </div>
