--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,39 +3,24 @@
   <input type="hidden" ng-model="nuevoArticulo.id" >
   <div class="form-group">
     <input type="text" class="form-control"  ng-model="nuevoArticulo.nombre" placeholder="Nombre del articulo">
-</div>
-<div class="form-group">
+  </div>
+  <div class="form-group">
     <select class="form-control" ng-model="nuevoArticulo.categoria" ng-options="x.nombre for x in categorias">
       <option value="" disabled selected>categorias</option>
     </select>
-</div>
-<div class="form-group">
+  </div>
+  <div class="form-group">
     <input type="text" class="form-control" ng-model="nuevoArticulo.imagen" placeholder="Url de la imagen">
-</div>
-<div class="form-group">
-    <textarea class="form-control" rows="5" ng-model="nuevoArticulo.descripcion" placeholder="Descripcion">
-    </textarea>
-</div>
-<div class="form-group">
+  </div>
+  <div class="form-group">
+    <input type="text" class="form-control" ng-model="nuevoArticulo.descripcion" placeholder="Descripcion">
+  </div>
+  <div class="form-group">
     <input type="text" class="form-control" ng-model="nuevoArticulo.precio" placeholder="Precio">
-</div>
-<!-- Este es el código anterior que los ubicaba en la mitad
-<div class="row">
-    <div class="small-10 column">
-    </div>
-    <div class="column medium-4 animated" ng-class-odd="'slideInLeft'" ng-class-even="'slideInRight'" ng-repeat="articulo in articulos">
-      <a href="#/articulo/{{articulo.nombre}}/{{articulo.id}}">
-        <div class="panel text-center">
-            <img class="circle" ng-src="{{articulo.imagen}}">
-            <h3>{{articulo.precio | currency}}</h3>
-            <h3 class="ellipsis">{{articulo.nombre}}</h3>
-            <h4>{{articulo.precio}}</h4>
-        </div>
-        </a>
-    </div>
-</div>
--->
-
+  </div>
+  <button type="submit" class="btn btn-primary">Ingresar</button>
+</form>
+</div><br>
 <div class="cuadroArticulo" ng-repeat="articulo in articulos">
     <div class="panel text-center">
         <a href="#/articulo/{{articulo.nombre}}/{{articulo.id}}">
