Obtener articulos del servicio web del BackEnd Play

--- a/app/views/articulo.html
+++ b/app/views/articulo.html
@@ -1,20 +1,3 @@
 <div class="jumbotron">
-  <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-block">
-      <h2 class="card-title">{{articulo.nombre}}</h2>
-      <!--<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>-->
-    </div>
-  </div>
-</div>
-
-<script src="MainCtrl.js"></script>
-<div class="infoProducto" ng-controller="MainCtrl">
-      <div class="panel text-center">
-          <img class="circle" ng-src="{{articulo.imagen}}">
-          <h3 >{{articulo.nombre}}</h3>
-        </a>
-          <h4>{{articulo.precio}}</h4>
-  </div>
+  <h2>{{nombreArticulo}}</h2>
 </div>
