--- a/app/views/registro.html
+++ b/app/views/registro.html
@@ -1,37 +1,28 @@
-<div class="jumbotron" id="registro">
+
   <form class="form-horizontal" ng-submit="registrar(nuevoRegistro)">
-    <h2 style="font-family:'cursive'">appVentas</h2>
-    <div class="form-group">
-      <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="inputEmail3" placeholder="Correo electrónico" ng-model="nuevoRegistro.email" required>
-      </div>
+    <div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+                <div class="card card-block">
+                    <h3 class="text-xs-center">Registro de Cuenta</h3>
+                    <hr>
+                    <fieldset>
+                        <div class="form-group has-error">
+                            <input class="form-control input-lg" placeholder="E-mail Address" name="email" type="text" required>
+                        </div>
+                        <div class="form-group has-success">
+                            <input class="form-control input-lg" placeholder="Password" name="password" value="" type="password" required>
+                        </div>
+                        <div class="form-group has-success">
+                            <input class="form-control input-lg" placeholder="Confirm Password" name="password" value="" type="password" required>
+                        </div>
+                        <input class="btn btn-lg btn-primary btn-block" value="Registrarme" type="submit">
+                    </fieldset>
+                </div>
+        </div>
     </div>
-    <div class="form-group">
-      <label for="inputText3" class="col-sm-2 control-label">Nombre</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="inputEmail3" placeholder="Nombre Completo" ng-model="nuevoRegistro.nombre" required>
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="inputText3" class="col-sm-2 control-label">Username</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="inputEmail3" placeholder="Nombre de usuario" ng-model="nuevoRegistro.username" required>
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-      <div class="col-sm-10">
-        <input type="password" class="form-control" id="inputPassword3" placeholder="Password" ng-model="nuevoRegistro.password" required>
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">Registrarme</button>
-      </div>
-    </div>
-  </form>
 </div>
+  </form>
 
 <ul>
   <li ng-repeat="usuario in registros">
